completed es6-const-let

--- a/es6-const-let/index.html
+++ b/es6-const-let/index.html
@@ -42,7 +42,7 @@
     addToGreetings('namaste', greetings);
     logAllGreetings(greetings);
 
-    let variable = 'meow';
+    const variable = 'meow';
     console.log('This variable is currently undefined due to hoisting, please fix: ', variable);
   </script>
 </body>
